--- a/Skylab.Curso.JavaScript/index.html
+++ b/Skylab.Curso.JavaScript/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-   <!--  <script>
-        // JavaScript
+    <h3>Curso JavaScript</h3>
+    <!--  <script>
+        // Aula 01
         var nome = "Luciano";
         var idade = 34;
         var peso = 74.5;
@@ -25,13 +26,67 @@
         console.log(aluno);
         console.log(aluno.peso);
     </script> -->
-    <script>
+
+    <!-- <script>
+        // Aula 02
         var x = 10, y = 5;
 
-        x = x + 3;
+        x *= y;
 
 
         console.log(x);
-    </script>
+    </script> -->
+
+    <!--  <script>
+        // Condicionais IF/Witch
+        function retornaSexo(sexo) {
+            // M, F
+            // Masculino, Feminino
+            if (sexo === 'M') {
+                return 'Masculino';
+            }
+            else if (sexo === 'F') {
+                return 'Feminino';
+            }
+            else {
+                return 'Outro';
+            }
+
+        }
+
+        var resultado = retornaSexo('M');
+        console.log(resultado);
+    </script> -->
+
+    <!-- <script>
+        // WITCH
+        function retornaSexo(sexo) {
+            switch (sexo) {
+                case 'M':
+                    return 'Masculino';
+                case 'F':
+                    return 'Feminino';
+                default:
+                    return 'Outro';
+            }
+
+        }
+
+        var resultado = retornaSexo('M');
+        console.log(resultado);
+    </script> -->
+
+    <!-- <script>
+        //AND, OR, NOT
+
+        var sexo = 'F';
+
+        var masculino = (sexo === 'M');
+
+        console.log(masculino);
+
+    </script> -->
+
 </body>
+
 </html>
